<resources>
    <string name="app_name">Contacts</string>
    <string name="ajouter">Ajouter</string>
    <string name="contacts">Contacts</string>
    <string name="supprimer">Supprimer</string>
    <string name="ajouter_un_contact">Ajouter un contact</string>
    <string name="nom">Nom:</string>
    <string name="courriel">Courriel:</string>
    <string name="t_l_phone">Téléphone:</string>
    <string name="ok">OK</string>
    <string name="annuler">ANNULER</string>
    <string name="prenom">Prenom:</string>
    <string name="modifier">Modifier</string>
</resources>